--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@
 /tmp/
 
 ## Documentation cache and generated files:
-/.yardoc/
-/_yardoc/
-/doc/
-/rdoc/
+# /.yardoc/
+# /_yardoc/
+# /doc/
+# /rdoc/
 
 ## Environment normalisation:
 /.bundle/
