--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# Keep the gh-pages branch in a subdirectory
+/gh-pages/
